feat(circuit): 添加谐振器组件并重构电阻配置
- 添加 ResonatorComponentInstance 类实现谐振器功能
- 新增高电平保持、低电平保持和初始相位配置参数
- 将电阻组件的倍率配置改为衰减配置，调整为整型范围0-15
- 更新组件配置界面的数值处理逻辑，修复鼠标位置计算偏差
- 添加谐振器组件实例工厂并在内置组件中注册
- 更新多语言文件添加新的配置项翻译
- 在组件配置界面添加组件图标和名称显示
- 添加电路算法文档和元件说明文档